# Vitis-AI

./: docker_run.sh
src/vai_quantizer/vai_q_pytorch/example/: ssd_quant.py
src/vai_quantizer/vai_q_pytorch/example/quantize_result/: SSD.py
src/vai_quantizer/vai_q_pytorch/example/ssd/: change_format.py  pyproject.toml  readme.md  train.py  transfer_learning.py
src/vai_quantizer/vai_q_pytorch/example/ssd/data_organizing/: collect_file_path.py  delete_extra_data.py  delete_not_found_path.py  get_color_mean.py  readme.md
src/vai_quantizer/vai_q_pytorch/example/ssd/result/: log.md  log_output.csv
src/vai_quantizer/vai_q_pytorch/example/ssd/trained/: gdrive_download.sh
