[tool.poetry]
name = "ssd"
version = "0.1.0"
description = ""
authors = ["takeshiho0531 <kawadatakeshiho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
torch = "2.0.1"
torchvision = "0.15.2"
opencv-python = "^4.8.0.74"
pandas = "^2.0.3"
pytz = "^2023.3"
packaging = "^23.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
